// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testRunner Unit Tests. test getTestNamePatternArgs Should escape certain symbols if testNamePattern is included 1`] = `
[
  "--testNamePattern",
  "Test \\?\\$\\^\\*\\(\\)\\.\\[\\]\\{\\}\\|\\+ Symbols",
]
`;

exports[`testRunner Unit Tests. test getTestNamePatternArgs Should not escape certain symbols if testNamePattern is included 1`] = `
[
  "--testNamePattern",
  "Test !@#"%&;:,<>=~\` Symbols",
]
`;

exports[`testRunner Unit Tests. test getTestNamePatternArgs Should return testNamePattern if flag is included 1`] = `
[
  "--testNamePattern",
  "Testing is Fun!",
]
`;
